--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,5 @@
     "version": "1.0.0",
     "homePage": "https://github.com/DAurielS/ST-FormatFixer",
     "auto_update": true,
-    "extension_version": 1,
-    "settingsPath": "settings.html"
+    "extension_version": 1.5
 }
